<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xunman.yibenjiapu.ui.ChangePassWordActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/bg_title" >
        <TextView
            style="@style/TextTheme_tipstheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/title_details_my" />
        <TextView
            android:id="@+id/tv_my_details_back"
            android:layout_width="@dimen/back_width"
            android:layout_height="@dimen/back_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/back_marginLeft"
            android:background="@drawable/selector_back" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/back"
        >
        <RelativeLayout
            android:id="@+id/rl_head_portrait"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_rl_avatar_height"
            android:padding="@dimen/details_rl_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_details_reminder_avatar"/>
            <com.xunman.yibenjiapu.utils.CircleImageView
                android:id="@+id/iv_head_portrait"
                android:layout_width="@dimen/details_avatar_width"
                android:layout_height="@dimen/details_avatar_height"
                android:layout_alignParentRight="true"
                android:onClick="show_click"
                android:src="@drawable/man"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_my_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_rl_height"
            android:padding="@dimen/details_rl_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_details_reminder_nickname"/>
            <TextView
                android:id="@+id/tv_my_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/my_details_nickname"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_rl_height"
            android:padding="@dimen/details_rl_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_details_reminder_jiapu_id"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/my_details_jiapu_id"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_rl_height"
            android:padding="@dimen/details_rl_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_details_reminder_phone"/>
            <TextView
                android:id="@+id/tv_my_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/my_details_phone"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_rl_height"
            android:padding="@dimen/details_rl_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_details_reminder_gender"/>
            <TextView
                android:id="@+id/tv_my_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/my_details_gender"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_rl_height"
            android:padding="@dimen/details_rl_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_details_reminder_signature"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/my_details_signature"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_rl_height"
            android:padding="@dimen/details_rl_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_details_reminder_jiapu_address"/>
            <TextView
                android:id="@+id/tv_my_familyAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/my_details_jiapu_address"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
