<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_title"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/bg_title">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/title_setting" />
        <TextView
            android:id="@+id/activity_setting_back"
            style="@style/TextTheme_tipstheme_buttontext"
            android:layout_width="@dimen/back_width"
            android:layout_height="@dimen/back_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/back_marginLeft"
            android:background="@drawable/selector_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="@dimen/setting_ll_padding">
        <RelativeLayout
            android:id="@+id/settings_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/setting_text_paddingBottom"
            android:paddingTop="@dimen/setting_text_paddingTop">
            <TextView
                android:id="@+id/settings_push_tips"
                style="@style/TextTheme_tipstheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/setting_item_1" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_view_height"
            android:background="@color/setting_view" />
        <TextView
            android:id="@+id/settings_cache_tips"
            style="@style/TextTheme_tipstheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/setting_text_paddingBottom"
            android:paddingTop="@dimen/setting_text_paddingTop"
            android:text="@string/setting_item_2" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_view_height"
            android:background="@color/setting_view" />
        <TextView
            android:id="@+id/settings_idea"
            style="@style/TextTheme_tipstheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/setting_text_paddingBottom"
            android:paddingTop="@dimen/setting_text_paddingTop"
            android:text="@string/setting_item_3" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_view_height"
            android:background="@color/setting_view" />
        <TextView
            android:id="@+id/settings_change_password"
            style="@style/TextTheme_tipstheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/setting_text_paddingBottom"
            android:paddingTop="@dimen/setting_text_paddingTop"
            android:text="@string/setting_item_4" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_view_height"
            android:background="@color/setting_view" />
        <TextView
            android:id="@+id/settings_update"
            style="@style/TextTheme_tipstheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/setting_text_paddingBottom"
            android:paddingTop="@dimen/setting_text_paddingTop"
            android:text="@string/setting_item_5" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_view_height"
            android:background="@color/setting_view" />
        <TextView
            android:id="@+id/settings_about_us"
            style="@style/TextTheme_tipstheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/setting_text_paddingBottom"
            android:paddingTop="@dimen/setting_text_paddingTop"
            android:text="@string/setting_item_6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:padding="@dimen/setting_btn_login_ll_padding">
        <TextView
            android:id="@+id/settings_user_logout"
            style="@style/TextTheme_tipstheme_buttontext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_btn_login_height"
            android:background="@drawable/selector_login_button"
            android:gravity="center"
            android:text="@string/setting_exit_login_btn" />
    </LinearLayout>
</LinearLayout>
