<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#e7ddca">

        <TextView
            style="@style/TextTheme_tipstheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/title_setting" />

        <TextView
            android:id="@+id/activity_setting_back"
            style="@style/TextTheme_tipstheme_buttontext"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/selector_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/back"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/settings_change_phone"
                style="@style/TextTheme_tipstheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/setting_item_1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />


            <TextView
                android:id="@+id/settings_cache_tips"
                style="@style/TextTheme_tipstheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/setting_item_2" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />
            <TextView
                android:id="@+id/settings_change_password"
                style="@style/TextTheme_tipstheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/setting_item_4" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />

            <TextView
                android:id="@+id/settings_update"
                style="@style/TextTheme_tipstheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/setting_item_5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />


            <TextView
                android:id="@+id/settings_about_us"
                style="@style/TextTheme_tipstheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/setting_item_6" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:padding="16dp">

            <TextView
                android:id="@+id/settings_user_logout"
                style="@style/TextTheme_tipstheme_buttontext"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/selector_login_button"
                android:gravity="center"
                android:text="@string/setting_exit_login_btn" />
        </LinearLayout>
    </LinearLayout>




</LinearLayout>
