<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >
    <TextView
        android:id="@+id/tv_station_letter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_letter_title"
        android:textColor="#000000"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/tv_station_letter_intro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_station_letter_title"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textColor="#777777"
        android:textSize="12sp"
        android:text="@string/station_letter"/>
    <TextView
        android:layout_centerInParent="true"
        android:id="@+id/tv_station_letter_official"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/station_letter_tag"
        android:textStyle="bold"
        android:textColor="#ff0000"/>
    <TextView
        android:id="@+id/tv_station_letter_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="#aaaaaa"
        android:textSize="10sp"
        android:text="2017/2/24"/>
</RelativeLayout>