<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_album"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/popwindow_btn1"
            android:textColor="#E9967A"
            android:background="@drawable/selector_bottom_menu"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_photograph"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/popwindow_btn2"
            android:layout_marginTop="5dp"
            android:textColor="#E9967A"
            android:background="@drawable/selector_bottom_menu"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/popwindow_btn3"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_bottom_menu"
            android:textColor="#E9967A"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>